tests/ui/rfcs/rfc-2093-infer-outlives/nested-structs.stderr
error: rustc_outlives
  --> $DIR/nested-structs.rs:4:1
   |
LL | struct Foo<'a, T> {
   | ^^^^^^^^^^^^^^^^^
   |
   = note: T: 'a

error[E0640]: rustc_outlives
  --> $DIR/nested-structs.rs:4:1
   |
LL | struct Foo<'a, T> {
   | ^^^^^^^^^^^^^^^^^
   |
note: T: 'a
  --> $DIR/nested-structs.rs:10:5
   |
LL |     field2: &'b U
   |     ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0640`.
